# packrat

./: .gitignore  Cargo.toml  README.md  output.csv
.github/workflows/: ci.yml
src/: cli.rs  lib.rs  log.rs  main.rs
src/model/: convert.rs  mod.rs  store.rs  task.rs  task_entry.rs  task_manager.rs  task_store.rs
src/ui/: components.rs  control.rs  editor.rs  lib.rs  mod.rs  render.rs  render_lib.rs  state.rs  terminal.rs  view.rs  widgets.rs
src/ui/render/: mod.rs  render_config.rs  render_create.rs  render_delete.rs  render_entry.rs  render_main.rs  render_popup.rs  render_task.rs  renderable.rs
src/ui/scratch/patrack.db/: db  snap.0000000000001FE1
tests/: test_model.rs
