[package]
name = "packrat"
version = "0.1.0"
edition = "2021"

[lib]
name = "packrat"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0", features = ["derive"]}
sled = "0.34.7"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
serde_json = "1.0.134"
tempfile = "3.14.0"
tui = "0.19.0"
crossterm = "0.28.1"
once_cell = "1.20.2"
clap = { version = "4.5.26", features = ["derive"] }
csv = "1.3.1"
toml = "0.8.19"
